# goroshek

./: .env.template  .gitignore  README.md  admins.template.json  pyproject.toml  students.template.json
goroshek/: __main__.py  bot.py  config.py  parser.py  tasks.py  utils.py
goroshek/commands/: make_post.py  start_bot.py
